--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@popperjs/core": "^2.11.0",
         "@tailwindcss/forms": "^0.5.2",
         "@vue/server-renderer": "^3.2.27",
+        "apexcharts": "^3.49.0",
         "autoprefixer": "^10.4.0",
         "axios": "^1.6.7",
         "chart.js": "^4.4.2",
@@ -51,6 +52,7 @@
         "vue": "^3.4.19",
         "vue-loader": "^16.2.0",
         "vue-material-design-icons": "^5.3.0",
+        "vue3-apexcharts": "^1.5.2",
         "webpack-node-externals": "^3.0.0"
     }
 }
