--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE='Asia/Yekaterinburg'
 
+REGION_CODE=86
+
 FORMAT_DATETIME='d.m.Y H:i:s'
 
 LOG_CHANNEL=stack
