--- a/public/web.config
+++ b/public/web.config
@@ -111,6 +111,6 @@
                 <add value="default.aspx" />
             </files>
         </defaultDocument>
-        <httpErrors errorMode="Custom" />
+        <httpErrors errorMode="DetailedLocalOnly" />
   </system.webServer>
 </configuration>
